force-app/main/default/objects/Academic_Group__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Group_Code__c</fullName>
        <description>[??] - 2 digit code for the academic code</description>
        <label>Academic Group Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Group_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Peoplesoft] - PS table: ACAD_ORG_TBL	
PS field: EFF_STATUS</description>
        <label>Academic Group Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>[??] - Effective Date</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <label>Academic Group</label>
    <nameField>
        <label>Academic Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic Groups</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Academic_Group_Code__c</columns>
        <columns>Academic_Group_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>