force-app/main/default/objects/Academic_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Academic_Group_Code__c</columns>
    <columns>Academic_Group_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>